<resources>
    <string name="app_name">Dicoding Pemula</string>
    <string name="novel_title">Novel Title</string>
    <string name="novel_rates">Novel Rates</string>
    <string name="novel_synopsis">Novel Synopsis</string>
    <string name="novel_author">Novel Author</string>
    <string name="email">ivannurilham60@gmail.com</string>
    <string name="devName">Ivan Nur Ilham Syah</string>
    <string name="dicodingLink">https://www.dicoding.com/users/112006</string>
    <string name="synopsis">Synopsis:</string>
</resources>
