<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="horizontal"
            android:background="@drawable/rounded_list">

            <ImageView
                android:id="@+id/dt_photo"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:src="@color/colorPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingHorizontal="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dt_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/novel_title"
                    android:textSize="20sp"
                    android:lineHeight="30sp"
                    android:textColor="#000"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/dt_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/novel_author"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <View
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/ic_rates" />

                    <TextView
                        android:id="@+id/dt_rates"
                        android:layout_width="87dp"
                        android:layout_height="wrap_content"
                        android:text="@string/novel_rates"
                        android:textColor="#ffac41"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/synopsis"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginTop="30dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/dt_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/novel_synopsis"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginTop="30dp"
            android:lineHeight="30sp"
            android:justificationMode="inter_word"/>

    </LinearLayout>

</ScrollView>