<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_list"
    android:padding="10dp"
    android:layout_gravity="center"
    android:layout_marginBottom="16dp">

    <LinearLayout
        android:id="@+id/rv_novel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_novel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@color/colorPrimary"/>

        <LinearLayout
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_novel_title"
                android:text="@string/novel_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/tv_novel_author"
                android:text="@string/novel_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <View
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/ic_rates" />

                <TextView
                    android:id="@+id/tv_novel_rates"
                    android:layout_width="87dp"
                    android:layout_height="wrap_content"
                    android:text="@string/novel_rates"
                    android:textColor="#ffac41"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>